--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,5 +1,5 @@
 <ul>
-  <li class="current"><a href="/">Doma</a></li>
+  <li class="current"><a href="/">Domov</a></li>
   <li><a href="/no_content.html">O šoli</a>
     <ul>
       <li><a href="/no_content.html">Osonovni podatki</a></li>
@@ -52,7 +52,7 @@
 
     </ul>
   </li>
-  <li><a href="/no_content.html">Document</a>
+  <li><a href="/no_content.html">Dokumenti</a>
     <ul>
       <li><a href="/no_content.html">LON za šolsko leto 2017/18</a></li>
       <li><a href="/no_content.html">Hišni red</a></li>
