--- a/partials/nav.html
+++ b/partials/nav.html
@@ -2,7 +2,7 @@
   <li class="current"><a href="/">Domov</a></li>
   <li><a href="/no_content.html">O šoli</a>
     <ul>
-      <li><a href="/no_content.html">Osonovni podatki</a></li>
+      <li><a href="/no_content.html">Osnovni podatki</a></li>
       <li><a href="/no_content.html">Zaposleni</a></li>
       <li>
         <a href="/no_content.html">Organi šole &#8594</a>
