--- a/partials/nav.html
+++ b/partials/nav.html
@@ -3,7 +3,7 @@
   <li><a href="/no_content.html">O šoli</a>
     <ul>
       <li><a href="/Osnovni_podatki.html">Osnovni podatki</a></li>
-      <li><a href="/no_content.html">Zaposleni</a></li>
+      <li><a href="/Zaposleni.html">Zaposleni</a></li>
       <li>
         <a href="/no_content.html">Organi šole &#8594</a>
         <ul>
