--- a/partials/nav.html
+++ b/partials/nav.html
@@ -22,7 +22,7 @@
   </li>
 
 
-  <li><a href="/no_content.html">Za učence in staše</a>
+  <li><a href="/no_content.html">Za učence in starše</a>
     <ul>
       <li><a href="/no_content.html">Urnik</a></li>
       <li><a href="/no_content.html">Šolski zvonec</a></li>
@@ -54,7 +54,7 @@
   </li>
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
-      <li><a href="/no_content.html">LON za šolsko leto 2017/18</a></li>
+      <li><a href="/no_content.html">LDN za šolsko leto 2017/18</a></li>
       <li><a href="/no_content.html">Hišni red</a></li>
       <li><a href="/no_content.html">Pravila šolskega reda</a></li>
 
