--- a/partials/footer.html
+++ b/partials/footer.html
@@ -48,8 +48,8 @@
             <p><a href="#">someone@untitled.tld</a></p>
           </li>
           <li>
-            <h3>Phone</h3>
-            <p>(800) 000-0000</p>
+            <h3>Kontakt:</h3>
+            <p>01-8942-160</p>
           </li>
         </ul>
       </section>
