--- a/partials/footer.html
+++ b/partials/footer.html
@@ -38,17 +38,17 @@
           <li>
             <h3>Address</h3>
             <p>
-              Untitled Incorporated<br />
-              1234 Somewhere Road Suite<br />
-              Nashville, TN 00000-0000
+              Osnovna šola Fara<br />
+              Fara 3<br />
+              1336 Kostel
             </p>
           </li>
           <li>
             <h3>Mail</h3>
-            <p><a href="#">someone@untitled.tld</a></p>
+            <p><a href="#">os.fara@guest.arnes.si</a></p>
           </li>
           <li>
-            <h3>Kontakt:</h3>
+            <h3>Telefon</h3>
             <p>01-8942-160</p>
           </li>
         </ul>
