--- a/partials/footer.html
+++ b/partials/footer.html
@@ -36,7 +36,7 @@
 
         <ul class="contact">
           <li>
-            <h3>Address</h3>
+            <h3>Naslov</h3>
             <p>
               Osnovna šola Fara<br />
               Fara 3<br />
@@ -44,7 +44,7 @@
             </p>
           </li>
           <li>
-            <h3>Mail</h3>
+            <h3>Elektronska pošta</h3>
             <p><a href="#">os.fara@guest.arnes.si</a></p>
           </li>
           <li>
