--- a/partials/footer.html
+++ b/partials/footer.html
@@ -34,7 +34,7 @@
           <h2>Contact</h2>
         </header>
 
-        <ul class="contact">
+        <ul class="Kontaktni podatki">
           <li>
             <h3>Naslov</h3>
             <p>
