--- a/partials/footer.html
+++ b/partials/footer.html
@@ -59,7 +59,7 @@
       <!-- Copyright -->
         <div id="copyright">
           <ul class="links">
-            <li>&copy; Explosive Candy. All rights reserved.</li>
+            <li>&copy; Vse pravice pridržane.</li>
           </ul>
         </div>
 
