--- a/partials/footer.html
+++ b/partials/footer.html
@@ -31,7 +31,7 @@
     <div class="col-4 col-12-medium">
       <section>
         <header>
-          <h2>Contact</h2>
+          <h2>Kontaktni podatki</h2>
         </header>
 
         <ul class="Kontaktni podatki">
