--- a/partials/footer.html
+++ b/partials/footer.html
@@ -4,11 +4,11 @@
     <div class="col-4 col-6-medium col-12-small">
       <section>
         <header>
-          <h2>Some links</h2>
+          <h2>Nekaj zanimivih povezav:</h2>
         </header>
         <ul class="divided">
-          <li><a href="#">Lorem ipsum dolor sit amet sit veroeros</a></li>
-          <li><a href="#">Sed et blandit consequat sed tlorem blandit</a></li>
+          <li><a href="#">Trenutno ni nobene povezave</a></li>
+          <li><a href="#">Trenutno ni nobene povezave</a></li>
 
       </section>
     </div>
