--- a/partials/nav.html
+++ b/partials/nav.html
@@ -57,6 +57,7 @@
       <li><a href="/no_content.html">LDN za šolsko leto 2017/18</a></li>
       <li><a href="/no_content.html">Hišni red</a></li>
       <li><a href="/no_content.html">Pravila šolskega reda</a></li>
+      <li><a href="/no_content.html">Vzgojni načrt</a></li>
 
     </ul>
   </li>
