--- a/partials/nav.html
+++ b/partials/nav.html
@@ -55,11 +55,15 @@
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
       <li><a href="/no_content.html">LDN za šolsko leto 2017/18</a></li>
-      <li><a href="/no_content.html">Hišni red</a></li>
-      <li><a href="/no_content.html">Pravila šolskega reda</a></li>
-      <li><a href="/no_content.html">Vzgojni načrt</a></li>
+      <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
+      <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
+      <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
 
     </ul>
   </li>
+  
+  <li><a href="/no_content.html">Kontakt</a>
+  
+	
 
 </ul>
