--- a/partials/nav.html
+++ b/partials/nav.html
@@ -55,9 +55,12 @@
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
       <li><a href="/no_content.html">LDN za šolsko leto 2017/18</a></li>
+      <li><a href="/no_content.html>LDN za leto 2018/2019</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
+   
+
 
     </ul>
   </li>
