--- a/partials/nav.html
+++ b/partials/nav.html
@@ -44,7 +44,12 @@
 
     </ul>
   </li>
-  <li><a href="/no_content.html">Galerija</a></li>
+  <li><a href="/no_content.html">Galerija</a>
+	<ul>
+		<li><a href="/no_content.html">CANKARJEVA VRHNIKA</a></li>
+		<li><a href="/no_content.html">MUZEJ POŠTE IN TELEKOMUNIKACIJ</a></li>
+	</ul>
+   </li>
   <li><a href="/no_content.html">Vrtec</a>
     <ul>
       <li><a href="/no_content.html">Informacije</a></li>
