--- a/partials/nav.html
+++ b/partials/nav.html
@@ -50,7 +50,7 @@
 		<li><a href="/no_content.html">MUZEJ POŠTE IN TELEKOMUNIKACIJ</a></li>
 	</ul>
    </li>
-  <li><a href="/no_content.html">Vrtec</a>
+   <li><a href="/no_content.html">Vrtec</a>
     <ul>
       <li><a href="/no_content.html">Informacije</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2018/19</a></li>
@@ -59,7 +59,7 @@
   </li>
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
-      <li><a href="/no_content.html">LDN za šolsko leto 2017/18</a></li>
+      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/18</a></li>
       <li><a href="/docs/LDN_2018_19.pdf" target= "_blank">LDN za leto 2018/2019</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
