--- a/partials/nav.html
+++ b/partials/nav.html
@@ -36,7 +36,7 @@
     </ul>
   </li>
 
-  <li><a href="/no_content.html">Svetovalna služba</a>
+  <li><a href="/SolskaSvetovalnaSluzba.html">Svetovalna služba</a>
     <ul>
       <li><a href="/no_content.html">Vpis v 1. razred</a></li>
       <li><a href="/no_content.html">Otroci s posebnimi potrebami</a></li>
