--- a/partials/nav.html
+++ b/partials/nav.html
@@ -40,8 +40,12 @@
     <ul>
       <li><a href="/no_content.html">Vpis v 1. razred</a></li>
       <li><a href="/no_content.html">Otroci s posebnimi potrebami</a></li>
-      <li><a href="/no_content.html">Vpis v srednjo šolo</a></li>
-
+      <li><a href="/no_content.html">Vpis v srednje šole</a></li>
+      <li><a href="/no_content.html">Nadarjeni učenci</a></li>
+      <li><a href="/no_content.html">Sodelovanje s svetovalnim centrom Ljubo Šercer</a></li>
+      <li><a href="/no_content.html">Pomoč v stiski</a></li>
+      <li><a href="/no_content.html">Preventivno delo</a></li>
+      <li><a href="/no_content.html">Vrtec Fara</a></li>
     </ul>
   </li>
   <li><a href="/no_content.html">Galerija</a>
