--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,7 +24,7 @@
 
   <li><a href="/no_content.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/URNIK_2018_2019_OS_FARA" target="_blank">Urnik</a></li>
+      <li><a href="/docs/URNIK.pdf" target="_blank">Urnik</a></li>
       <li><a href="/no_content.html">Šolski zvonec</a></li>
       <li><a href="/no_content.html">Plan pisnega ocenjevanja</a></li>
       <li><a href="/no_content.html">Kriteriji ocenjevanja</a></li>
