--- a/partials/nav.html
+++ b/partials/nav.html
@@ -29,7 +29,7 @@
       <li><a href="/no_content.html">Plan pisnega ocenjevanja</a></li>
       <li><a href="/no_content.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetniki</a></li>
-      <li><a href="/no_content.html">Izbirni predmeti</a></li>
+      <li><a href="/docs/OBVEZNI IZBIRNI PREDMETI.pdf" target="_blank"">Izbirni predmeti</a></li>
       <li><a href="/no_content.html">Govorilne ure</a></li>
       <li><a href="/no_content.html">Dnevi dejavnosti</a></li>
 
