--- a/partials/nav.html
+++ b/partials/nav.html
@@ -38,14 +38,14 @@
 
   <li><a href="/SolskaSvetovalnaSluzba.html">Svetovalna služba</a>
     <ul>
-      <li><a href="/no_content.html">Vpis v 1. razred</a></li>
-      <li><a href="/no_content.html">Otroci s posebnimi potrebami</a></li>
-      <li><a href="/no_content.html">Vpis v srednje šole</a></li>
-      <li><a href="/no_content.html">Nadarjeni učenci</a></li>
-      <li><a href="/no_content.html">Sodelovanje s svetovalnim centrom Ljubo Šercer</a></li>
-      <li><a href="/no_content.html">Pomoč v stiski</a></li>
-      <li><a href="/no_content.html">Preventivno delo</a></li>
-      <li><a href="/no_content.html">Vrtec Fara</a></li>
+      <li><a href="/docs/VpisV_1_Razred.pdf" target="_blank">Vpis v 1. razred</a></li>
+      <li><a href="/docs/UčenciSPosebnimiPotrebami.pdf" target="_blank">Otroci s posebnimi potrebami</a></li>
+      <li><a href="/docs/VpisVSsrednjeSole.pdf">Vpis v srednje šole</a></li>
+      <li><a href="/docs/NadarjeniUcenci.pdf">Nadarjeni učenci</a></li>
+      <li><a href="/docs/SodelovanjeSSvetovalnimCentromOSLjuboŠercer.pdf" target="_blank">Sodelovanje s svetovalnim centrom Ljubo Šercer</a></li>
+      <li><a href="/docs/PomocVstiski.pdf" target="_blank">Pomoč v stiski</a></li>
+      <li><a href="/docs/PreventivnoDelo.pdf" target="_blank">Preventivno delo</a></li>
+      <li><a href="/docs/VrtecFara.pdf" target="_blank">Vrtec Fara</a></li>
     </ul>
   </li>
   <li><a href="/no_content.html">Galerija</a>
