--- a/partials/nav.html
+++ b/partials/nav.html
@@ -30,7 +30,7 @@
       <li><a href="/no_content.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetniki</a></li>
       <li><a href="/docs/OBVEZNI IZBIRNI PREDMETI.pdf" target="_blank"">Izbirni predmeti</a></li>
-      <li><a href="/no_content.html">Govorilne ure</a></li>
+      <li><a href="/Govorilne_ure.html">Govorilne ure</a></li>
       <li><a href="/no_content.html">Dnevi dejavnosti</a></li>
 
     </ul>
