--- a/partials/nav.html
+++ b/partials/nav.html
@@ -41,6 +41,7 @@
       <li><a href="/docs/VpisV_1_Razred.pdf" target="_blank">Vpis v 1. razred</a></li>
       <li><a href="/docs/UčenciSPosebnimiPotrebami.pdf" target="_blank">Otroci s posebnimi potrebami</a></li>
       <li><a href="/docs/VpisVSsrednjeSole.pdf">Vpis v srednje šole</a></li>
+      <li><a href="/no_content.html">Predmetniki srednjih šol</a></li>
       <li><a href="/docs/NadarjeniUcenci.pdf">Nadarjeni učenci</a></li>
       <li><a href="/docs/SodelovanjeSSvetovalnimCentromOSLjuboŠercer.pdf" target="_blank">Sodelovanje s svetovalnim centrom Ljubo Šercer</a></li>
       <li><a href="/docs/PomocVstiski.pdf" target="_blank">Pomoč v stiski</a></li>
