--- a/partials/nav.html
+++ b/partials/nav.html
@@ -58,6 +58,9 @@
    <li><a href="/no_content.html">Vrtec</a>
     <ul>
       <li><a href="/no_content.html">Informacije</a></li>
+      <li><a href="/no_content.html">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
+      <li><a href="/no_content.html">Pravilnik o varnosti otrok</a></li>
+      <li><a href="/no_content.html">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2018/19</a></li>
 
     </ul>
