--- a/partials/nav.html
+++ b/partials/nav.html
@@ -58,7 +58,7 @@
    <li><a href="/no_content.html">Vrtec</a>
     <ul>
       <li><a href="/no_content.html">Informacije</a></li>
-      <li><a href="/no_content.html">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
+      <li><a href="/docs/Letni delovni nacrt_18_19.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
       <li><a href="/no_content.html">Pravilnik o varnosti otrok</a></li>
       <li><a href="/no_content.html">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2018/19</a></li>
