--- a/partials/nav.html
+++ b/partials/nav.html
@@ -59,7 +59,7 @@
     <ul>
       <li><a href="/no_content.html">Informacije</a></li>
       <li><a href="/docs/Letni delovni nacrt_18_19.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
-      <li><a href="/no_content.html">Pravilnik o varnosti otrok</a></li>
+      <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/no_content.html">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2018/19</a></li>
 
