--- a/partials/nav.html
+++ b/partials/nav.html
@@ -57,7 +57,7 @@
    </li>
    <li><a href="/no_content.html">Vrtec</a>
     <ul>
-      <li><a href="/no_content.html">Informacije</a></li>
+      <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Letni delovni nacrt_18_19.pdf" target="_blank">Letni delovni načrt Vrtca pri OŠ Fara</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/no_content.html">Obrazci - vloge</a></li>
