--- a/partials/nav.html
+++ b/partials/nav.html
@@ -62,6 +62,7 @@
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2018/19</a></li>
+      <li><a href="/no_content.html">Jedilnik za tekoči mesec v vrtcu Fara</a></li>
 
     </ul>
   </li>
