--- a/partials/nav.html
+++ b/partials/nav.html
@@ -29,9 +29,9 @@
       <li><a href="/no_content.html">Plan pisnega ocenjevanja</a></li>
       <li><a href="/no_content.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetniki</a></li>
-      <li><a href="/docs/OBVEZNI IZBIRNI PREDMETI.pdf" target="_blank"">Izbirni predmeti</a></li>
+      <li><a href="/docs/OBVEZNI IZBIRNI PREDMETI.pdf" target="_blank">Izbirni predmeti</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure</a></li>
-      <li><a href="/no_content.html">Dnevi dejavnosti</a></li>
+      <li><a href="/docs/Dnevi_dejavnosti.pdf" target="_blank"">Dnevi dejavnosti</a></li>
 
     </ul>
   </li>
