--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2178,8 +2178,8 @@ input, select, textarea {
 	}
 
 		#banner header {
-			background-color: rgba(45, 30, 31, 0.98);
-			/*background-color: transparent;*/
+			/*background-color: rgba(45, 30, 31, 0.98);*/
+			background-color: transparent;
 			display: inline-block;
 			padding: 2.5em 5em;
 			border-radius: 10px;
