--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,14 +24,15 @@
 
   <li><a href="/no_content.html">Za učence in starše</a>
     <ul>
-      <li><a href="/docs/URNIK.pdf" target="_blank">Urnik</a></li>
-      <li><a href="/no_content.html">Šolski zvonec</a></li>
-      <li><a href="/no_content.html">Plan pisnega ocenjevanja</a></li>
-      <li><a href="/no_content.html">Kriteriji ocenjevanja</a></li>
-      <li><a href="/docs/PREDMETNIK.pdf" target="_blank">Predmetniki</a></li>
-      <li><a href="/docs/OBVEZNI IZBIRNI PREDMETI.pdf" target="_blank">Izbirni predmeti</a></li>
-      <li><a href="/Govorilne_ure.html">Govorilne ure</a></li>
-      <li><a href="/docs/Dnevi_dejavnosti.pdf" target="_blank"">Dnevi dejavnosti</a></li>
+      <li><a href="/docs/URNIK_19_20.pdf" target="_blank">Urnik 2019-2020</a></li>
+      <li><a href="/docs/SolskiZvonec_2019_2020.pdf" target="_blank">Šolski zvonec 2019-2020</a></li>
+      <li><a href="/PlanOcenjevanja.html">Plan pisnega ocenjevanja 2019-2020</a></li>
+      <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
+      <li><a href="/docs/Predmetnik2019_2020.pdf" target="_blank">Predmetnik 2019-2020</a></li>
+	   <li><a href="/docs/SolskiKoledar2019_2020.pdf" target="_blank">Šolski koledar 2019-2020</a></li>
+      <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2019-2020</a></li>
+      <li><a href="/Govorilne_ure.html">Govorilne ure 2019-2020</a></li>
+      <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
 
     </ul>
   </li>
