--- a/partials/nav.html
+++ b/partials/nav.html
@@ -33,7 +33,7 @@
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2019-2020</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
-      <li><a href="/september_1920.pdf" target="_blank">Jedilniki</a></li>
+      <li><a href="/docs/september_1920.pdf" target="_blank">Jedilniki</a></li>
 
     </ul>
   </li>
