--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,6 +1,6 @@
 <ul>
   <li class="current"><a href="/">Domov</a></li>
-  <li><a href="/no_content.html">O šoli</a>
+  <li><a href="/Kontakt.html">O šoli</a>
     <ul>
       <li><a href="/Osnovni_podatki.html">Osnovni podatki</a></li>
       <li><a href="/Zaposleni.html">Zaposleni</a></li>
