--- a/partials/nav.html
+++ b/partials/nav.html
@@ -8,7 +8,7 @@
         <a href="/no_content.html">Organi šole &#8594</a>
         <ul>
           <li><a href="/no_content.html">Svet šole</a></li>
-          <li><a href="/no_content.html">Svet staršev</a></li>
+          <li><a href="/docs/SvetStarsev.pdf">Svet staršev</a></li>
         </ul>
       </li>
       <li>
