--- a/partials/nav.html
+++ b/partials/nav.html
@@ -7,7 +7,7 @@
       <li>
         <a href="/no_content.html">Organi šole &#8594</a>
         <ul>
-          <li><a href="/no_content.html">Svet šole</a></li>
+          <li><a href="/docs/SvetSole1920.pdf">Svet šole</a></li>
           <li><a href="/docs/SvetStarsev.pdf">Svet staršev</a></li>
         </ul>
       </li>
