--- a/partials/nav.html
+++ b/partials/nav.html
@@ -5,7 +5,7 @@
       <li><a href="/Osnovni_podatki.html">Osnovni podatki</a></li>
       <li><a href="/Zaposleni.html">Zaposleni</a></li>
       <li>
-        <a href="/no_content.html">Organi šole &#8594</a>
+        <a href="/docs/OrganiSole.pdf">Organi šole &#8594</a>
         <ul>
           <li><a href="/docs/SvetSole1920.pdf">Svet šole</a></li>
           <li><a href="/docs/SvetStarsev.pdf">Svet staršev</a></li>
