--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,6 +34,8 @@
       <li><a href="/Govorilne_ure.html">Govorilne ure 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
       <li><a href="/docs/september_1920.pdf" target="_blank">Jedilniki</a></li>
+      <li><a href="/docs/Govorilne.pdf" target="_blank">Govorilne ure in roditeljski sestanki</a></li>
+
 
     </ul>
   </li>
