--- a/partials/nav.html
+++ b/partials/nav.html
@@ -31,7 +31,7 @@
       <li><a href="/docs/Predmetnik2019_2020.pdf" target="_blank">Predmetnik 2019-2020</a></li>
 	   <li><a href="/docs/SolskiKoledar2019_2020.pdf" target="_blank">Šolski koledar 2019-2020</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2019-2020</a></li>
-      <li><a href="/Govorilne_ure.html">Govorilne ure 2019-2020</a></li>
+      <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
       <li><a href="/docs/september_1920.pdf" target="_blank">Jedilniki</a></li>
 
