--- a/partials/nav.html
+++ b/partials/nav.html
@@ -34,6 +34,7 @@
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
       <li><a href="/docs/september_1920.pdf" target="_blank">Jedilniki</a></li>
+	    <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a
 
     </ul>
   </li>
