--- a/partials/nav.html
+++ b/partials/nav.html
@@ -35,6 +35,8 @@
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
       <li><a href="/docs/september_1920.pdf" target="_blank">Jedilniki</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
+      <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2019-2020</a></li>
+
 
     </ul>
   </li>
