--- a/partials/nav.html
+++ b/partials/nav.html
@@ -56,7 +56,7 @@
   </li>
   <li><a href="/no_content.html">Galerija</a>
 	<ul>
-		<li><a href="/no_content.html">CANKARJEVA VRHNIKA</a></li>
+		<li><a href="/images/CANKARJEVA_VRHNIKA_IN_MUZEJ/01.jpg">CANKARJEVA VRHNIKA</a></li>
 		<li><a href="/no_content.html">MUZEJ POŠTE IN TELEKOMUNIKACIJ</a></li>
 	</ul>
    </li>
