--- a/partials/nav.html
+++ b/partials/nav.html
@@ -57,8 +57,7 @@
   <li><a href="/no_content.html">Galerija</a>
 	<ul>
 		<li><a href="/images/CANKARJEVA_VRHNIKA_IN_MUZEJ/01.jpg">CANKARJEVA VRHNIKA</a></li>
-		<li><a href="/images/CANKARJEVA_VRHNIKA_IN_MUZEJ/02.jpg">CANKARJEVA VRHNIKA</a></li>
-		<li><a href="/no_content.html">MUZEJ POŠTE IN TELEKOMUNIKACIJ</a></li>
+		<li><a href="/images/CANKARJEVA_VRHNIKA_IN_MUZEJ/02.jpg"</a></li>
 	</ul>
    </li>
    <li><a href="/no_content.html">Vrtec</a>
