--- a/partials/nav.html
+++ b/partials/nav.html
@@ -73,8 +73,9 @@
   </li>
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
-      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/18</a></li>
-      <li><a href="/docs/LDN_2018_19.pdf" target= "_blank">LDN za leto 2018/2019</a></li>
+      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/2018</a></li>
+      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/2018</a></li>
+      <li><a href="/no_content.html">target= "_blank">LDN za leto 2018/2019</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
