--- a/partials/nav.html
+++ b/partials/nav.html
@@ -74,8 +74,8 @@
   <li><a href="/no_content.html">Dokumenti</a>
     <ul>
       <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/2018</a></li>
-      <li><a href="/docs/Realizacija_LDN_17_18.pdf" target="_blank">Realizacija LDN - 2017/2018</a></li>
-      <li><a href="/no_content.html">target= "_blank">LDN za leto 2018/2019</a></li>
+      <li><a href="/no_content.html">Realizacija LDN - 2018/2019</a></li>
+      <li><a href="/no_content.html">LDN za leto 2019/2020</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PravilaSolskegaReda_17_18.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VzgojniNacrt_17_18.pdf" target= "_blank">Vzgojni načrt</a></li>
