--- a/partials/nav.html
+++ b/partials/nav.html
@@ -21,7 +21,16 @@
     </ul>
   </li>
 
+<li><a href="/no_content.html">Predmeti - tekoče informacije</a>
+    <ul>
+      <li><a href="/no_content.html">Angleški jezik</a></li>
+      <li><a href="/no_content.html">Matematika</a></li>
 
+
+    </ul>
+  </li>
+	
+	
   <li><a href="/no_content.html">Za učence in starše</a>
     <ul>
       <li><a href="/docs/URNIK_19_20.pdf" target="_blank">Urnik 2019-2020</a></li>
