--- a/partials/nav.html
+++ b/partials/nav.html
@@ -66,7 +66,7 @@
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
       <li><a href="/no_content.html">Dogodki v vrtcu 2019/2020</a></li>
-      <li><a href="/no_content.html">Jedilnik za tekoči mesec v vrtcu Fara</a></li>
+      <li><a href="/docs/oktober1920.pdf">Jedilnik za tekoči mesec v vrtcu Fara</a></li>
 
     </ul>
   </li>
