--- a/partials/nav.html
+++ b/partials/nav.html
@@ -35,6 +35,7 @@
       <li><a href="/docs/oktober1920.pdf" target="_blank">Jedilnik za oktober 2019</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2019-2020</a></li>
+      <li><a href="/no_content.html>Nacionalno preverjanje znanja 2019-2020</a></li>
 
 
     </ul>
