--- a/partials/nav.html
+++ b/partials/nav.html
@@ -32,7 +32,7 @@
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2019-2020</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
-      <li><a href="/docs/januar_1920_S.pdf" target="_blank">Jedilnik za januar</a></li>
+      <li><a href="/docs/januar_1920_S.pdf" target="_blank">Jedilnik za tekoči mesec_JANUAR 2020</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2019-2020</a></li>
       <li><a href="/NPZ_2020.html">Nacionalno preverjanje znanja 2019-2020</a></li>
