--- a/partials/nav.html
+++ b/partials/nav.html
@@ -93,7 +93,7 @@
   </li>
   
   <li><a href="/Kontakt.html">Kontakt</a>
-  <li><a href="/no_content.html">Covid-19</a>
+  <li><a href="/Covid-19.html">Covid-19</a>
   
 	
 
