--- a/partials/nav.html
+++ b/partials/nav.html
@@ -94,7 +94,8 @@
   
   <li><a href="/Kontakt.html">Kontakt</a>
   <li><a href="/Covid-19.html">Covid-19</a>
-  
+	  <li><a href="no_content.html" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
+  </li>
 	
 
 </ul>
