--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,9 @@
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
 	  <li><a href="no_content.html" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
+	  <li><a href="no_content.html" target="_blank">Angleščina</a></li>
+	  <li><a href="no_content.html" target="_blank">Likovna umetnost</a></li>
+	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
   </ul>
   </li>
 	
