--- a/partials/nav.html
+++ b/partials/nav.html
@@ -99,6 +99,9 @@
 	  <li><a href="no_content.html" target="_blank">Angleščina</a></li>
 	  <li><a href="no_content.html" target="_blank">Likovna umetnost</a></li>
 	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
+	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
+	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
+	  <li><a href="no_content.html" target="_blank">Biologija</a></li>
   </ul>
   </li>
 	
