--- a/partials/nav.html
+++ b/partials/nav.html
@@ -97,7 +97,7 @@
     <ul>
 	  <li><a href="no_content.html" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
 	  <li><a href="no_content.html" target="_blank">Angleščina</a></li>
-	  <li><a href="no_content.html" target="_blank">Likovna umetnost</a></li>
+	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
 	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
 	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
