--- a/partials/nav.html
+++ b/partials/nav.html
@@ -103,11 +103,11 @@
 	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
 	  <li><a href="no_content.html" target="_blank">Biologija</a></li>
-	  <li><a href="no_content.html" target="_blank">Naravoslovje</a></li>
+	  <li><a href="no_content.html" target="_blank">Naravoslovje &#8594</a></li>
 	    <ul>
             <li><a href="no_content.html" target="_blank">Naravoslovje_6</a></li>
             <li><a href="no_content.html" target="_blank">Naravoslovje_7</a></li>
-		    </ul>
+	    </ul>
   </ul>
   </li>
 	
