--- a/partials/nav.html
+++ b/partials/nav.html
@@ -104,7 +104,7 @@
 	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
 	  <li><a href="no_content.html" target="_blank">Biologija</a></li>
 	  <li>
-		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a></li>
+		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a>
 	    <ul>
             <li><a href="no_content.html" target="_blank">Naravoslovje_6</a></li>
             <li><a href="no_content.html" target="_blank">Naravoslovje_7</a></li>
