--- a/partials/nav.html
+++ b/partials/nav.html
@@ -106,7 +106,7 @@
 	  <li>
 		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a>
 	    <ul>
-            <li><a href="Naravoslovje_6.pdf" target="_blank">Naravoslovje_6</a></li>
+            <li><a href="/docs/Naravoslovje_6.pdf" target="_blank">Naravoslovje_6</a></li>
             <li><a href="no_content.html" target="_blank">Naravoslovje_7</a></li>
 	    </ul>
 	  </li>
