--- a/partials/nav.html
+++ b/partials/nav.html
@@ -107,7 +107,7 @@
 		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a>
 	    <ul>
             <li><a href="/docs/Naravoslovje_6.pdf" target="_blank">Naravoslovje_6</a></li>
-            <li><a href="no_content.html" target="_blank">Naravoslovje_7</a></li>
+            <li><a href="/docs/Naravoslovje_7.pdf" target="_blank">Naravoslovje_7</a></li>
 	    </ul>
 	  </li>
   </ul>
