--- a/partials/nav.html
+++ b/partials/nav.html
@@ -102,7 +102,13 @@
 	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
 	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
-	  <li><a href="no_content.html" target="_blank">Biologija</a></li>
+	  <li>
+		  <a href="no_content.html" target="_blank">Biologija &#8594</a></li>
+	    <ul>
+            <li><a href="/docs/Naravoslovje_6.pdf" target="_blank">Biologija_8</a></li>
+            <li><a href="/docs/Naravoslovje_7.pdf" target="_blank">Biologija_9</a></li>
+	    </ul>
+	  </li>
 	  <li>
 		  <a href="no_content.html" target="_blank">Naravoslovje &#8594</a>
 	    <ul>
