--- a/partials/nav.html
+++ b/partials/nav.html
@@ -105,7 +105,7 @@
 	  <li>
 		  <a href="no_content.html" target="_blank">Biologija &#8594</a>
 	    <ul>
-            <li><a href="/docs/Naravoslovje_6.pdf" target="_blank">Biologija_8</a></li>
+            <li><a href="/docs/BIO_8.pdf" target="_blank">Biologija_8</a></li>
             <li><a href="/docs/Naravoslovje_7.pdf" target="_blank">Biologija_9</a></li>
 	    </ul>
 	  </li>
