--- a/partials/nav.html
+++ b/partials/nav.html
@@ -106,7 +106,7 @@
 		  <a href="no_content.html" target="_blank">Biologija &#8594</a>
 	    <ul>
             <li><a href="/docs/BIO_8.pdf" target="_blank">Biologija_8</a></li>
-            <li><a href="/docs/Naravoslovje_7.pdf" target="_blank">Biologija_9</a></li>
+            <li><a href="/docs/Razvrscanje_BIO_9.pdf" target="_blank">Biologija_9</a></li>
 	    </ul>
 	  </li>
 	  <li>
