--- a/partials/nav.html
+++ b/partials/nav.html
@@ -101,7 +101,13 @@
 	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
 	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
 	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
-	  <li><a href="no_content.html" target="_blank">Kemija</a></li>
+	  <li>
+		  <a href="no_content.html" target="_blank">Kemija &#8594</a></li>
+	    <ul>
+            <li><a href="/docs/BIO_8.pdf" target="_blank">Kemija_8</a></li>
+            <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Kemija_9</a></li>
+	    </ul>
+	  </li>
 	  <li>
 		  <a href="no_content.html" target="_blank">Biologija &#8594</a>
 	    <ul>
