--- a/partials/nav.html
+++ b/partials/nav.html
@@ -102,7 +102,7 @@
 	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
 	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li>
-		  <a href="no_content.html" target="_blank">Kemija &#8594</a></li>
+		  <a href="no_content.html" target="_blank">Kemija &#8594</a>
 	    <ul>
             <li><a href="/docs/BIO_8.pdf" target="_blank">Kemija_8</a></li>
             <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Kemija_9</a></li>
