--- a/partials/nav.html
+++ b/partials/nav.html
@@ -95,12 +95,12 @@
   <li><a href="/Kontakt.html">Kontakt</a>
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
-	  <li><a href="no_content.html" target="_blank">Informacije za starše in otroke</a></li>
+	  <li><a href="/Covid-19.html" target="_blank">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
 	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
 	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
-	  <li><a href="no_content.html" target="_blank">Matematika</a></li>
-	  <li><a href="no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
+	  <li><a href="/no_content.html" target="_blank">Matematika</a></li>
+	  <li><a href="/no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li>
 		  <a href="no_content.html" target="_blank">Kemija &#8594</a>
 	    <ul>
