--- a/partials/nav.html
+++ b/partials/nav.html
@@ -95,7 +95,7 @@
   <li><a href="/Kontakt.html">Kontakt</a>
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
-	  <li><a href="/Covid-19.html" target="_blank">Informacije za starše in otroke</a></li>
+	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
 	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
 	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
