--- a/partials/nav.html
+++ b/partials/nav.html
@@ -100,7 +100,7 @@
 	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
 	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
 	  <li><a href="/no_content.html" target="_blank">Matematika</a></li>
-	  <li><a href="/no_content.html" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
+	  <li><a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li>
 		  <a href="no_content.html" target="_blank">Kemija &#8594</a>
 	    <ul>
