--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,7 @@
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
+	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
 	  <li><a href="/docs/prirocnik-virus.pdf" target="_blank">Covid-19_PRIROČNIK - Kako se spopasti?</a></li>
 	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
 	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
