--- a/partials/nav.html
+++ b/partials/nav.html
@@ -104,10 +104,10 @@
 	  <li>
 		  <a href="/no_content.html" target="_blank">Matematika &#8594</a>
 		  <ul>
-            <li><a href="/docs/Halogeni_KEM_8.pdf" target="_blank">Matematika_6</a></li>
-            <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Matematika_7</a></li>
-	    <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Matematika_8</a></li>
-	    <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Matematika_9</a></li>
+            <li><a href="/docs/matematika_6.pdf" target="_blank">Matematika_6</a></li>
+            <li><a href="/docs/matematika_7.pdf" target="_blank">Matematika_7</a></li>
+	    <li><a href="/docs/matematika_8.pdf" target="_blank">Matematika_8</a></li>
+	    <li><a href="/docs/matematika_9.pdf" target="_blank">Matematika_9</a></li>
 	    </ul>
 	  </li>
 	  <li><a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
