--- a/partials/nav.html
+++ b/partials/nav.html
@@ -101,6 +101,7 @@
 	  <li><a href="/docs/Hitrostna-poštevanka-natisni-in-igraj-4ld52c.pdf" target="_blank">Za krajši čas - IGRA POŠTEVANKA</a></li>
 	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
 	  <li><a href="/docs/Navodila za delo doma_TJA.pdf" target="_blank">Angleški jezik</a></li>
+	  <li><a href="/docs/Pouk na daljavo, zgodovina, geografija, DKE.pdf" target="_blank">Zgodovina_Geografija_DKE</a></li>
 	  <li><a href="/docs/LUM - načrt dela - 3. do 9. razred.pdf" target="_blank">Likovna umetnost</a></li>
 	  <li>
 		  <a href="/no_content.html" target="_blank">Matematika &#8594</a>
