--- a/partials/nav.html
+++ b/partials/nav.html
@@ -112,8 +112,17 @@
 	    <li><a href="/docs/matematika_9.pdf" target="_blank">Matematika_9</a></li>
 	    </ul>
 	  </li>
-	  <li><a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
 	  <li>
+		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
+	  <li>
+		  <ul>
+            <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_5</a></li>
+            <li><a href="/docs/GUM_6_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_6</a></li>
+            <li><a href="/docs/GUM_7_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_7</a></li>
+	    <li><a href="/docs/GUM_8_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_8</a></li>
+	    <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_9</a></li>
+	    </ul>
+	  </li>
 		  <a href="no_content.html" target="_blank">Kemija &#8594</a>
 	    <ul>
             <li><a href="/docs/Halogeni_KEM_8.pdf" target="_blank">Kemija_8</a></li>
