--- a/partials/nav.html
+++ b/partials/nav.html
@@ -113,7 +113,7 @@
 	    </ul>
 	  </li>
 	  <li>
-		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a></li>
+		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a>
 	  <li>
 		  <ul>
             <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_5</a></li>
