--- a/partials/nav.html
+++ b/partials/nav.html
@@ -113,9 +113,9 @@
 	    </ul>
 	  </li>
 	  <li>
-		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda</a>
+		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda &#8594</a>
 	  <li>
-		  <ul>
+	           <ul>
             <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_5</a></li>
             <li><a href="/docs/GUM_6_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_6</a></li>
             <li><a href="/docs/GUM_7_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_7</a></li>
