--- a/partials/nav.html
+++ b/partials/nav.html
@@ -107,7 +107,7 @@
 	  <li>
 		  <a href="/no_content.html" target="_blank">Matematika &#8594</a>
 		  <ul>
-	    <li><a href="/no_content.html">Matematika_5</a></li>
+	    <li><a href="/docs/matematika_5.pdf" target="_blank">Matematika_5</a></li>
             <li><a href="/docs/matematika_6.pdf" target="_blank">Matematika_6</a></li>
             <li><a href="/docs/matematika_7.pdf" target="_blank">Matematika_7</a></li>
 	    <li><a href="/docs/matematika_8.pdf" target="_blank">Matematika_8</a></li>
