--- a/partials/nav.html
+++ b/partials/nav.html
@@ -97,6 +97,7 @@
     <ul>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
+	  <li><a href="/docs/Poseben program za otroke in prost dostop do spletnih vsebin.pdf" target="_blank">RTVSLO-program za mlade-INFO</a></li>
 	  <li><a href="/docs/prirocnik-virus.pdf" target="_blank">Covid-19_PRIROČNIK - Kako se spopasti?</a></li>
 	  <li><a href="/docs/Hitrostna-poštevanka-natisni-in-igraj-4ld52c.pdf" target="_blank">Za krajši čas - IGRA POŠTEVANKA</a></li>
 	  <li><a href="/docs/Slovenščina_navodila za delo.pdf" target="_blank">Slovenščina 16.3.2020 do 20.3.2020</a></li>
