--- a/partials/nav.html
+++ b/partials/nav.html
@@ -93,6 +93,7 @@
   </li>
   
   <li><a href="/Kontakt.html">Kontakt</a>
+  <li><a href="/Kontakt.html">Covid-19_Nižja stopnja</a>
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
