--- a/partials/nav.html
+++ b/partials/nav.html
@@ -93,7 +93,11 @@
   </li>
   
   <li><a href="/Kontakt.html">Kontakt</a>
-  <li><a href="/Kontakt.html">Covid-19_Nižja stopnja</a>
+  <li><a href="/no_content.html">Covid-19_Nižja stopnja</a>
+	  <ul>
+	  <li><a href="/no_content.html">SPO_1.in2.razred</a></li>
+	  </ul> 
+	  </li>
   <li><a href="/Covid-19.html">Covid-19</a>
     <ul>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
