--- a/partials/nav.html
+++ b/partials/nav.html
@@ -121,7 +121,7 @@
 	    </ul>
 	  </li>
 	  <li>
-		  <a href="/docs/Glasbena umetnost.pdf" target="_blank">Glasbena umetnost od 5.-9. razreda &#8594</a>
+		  <a href="/docs/no_content.html">Glasbena umetnost od 5.-9. razreda &#8594</a>
 
 	           <ul>
             <li><a href="/docs/GUM_5_učenje na daljavo.pdf" target="_blank">Glasbena umetnost_5</a></li>
