--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,7 @@
   <li><a href="/no_content.html">Covid-19_Nižja stopnja</a>
 	  <ul>
 	  <li><a href="/docs/SPO_1. in 2. razred.pdf" target="_blank">SPO_1.in2.razred</a></li>
+	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
 	  </ul> 
 	  </li>
   <li><a href="/Covid-19.html">Covid-19</a>
