--- a/partials/nav.html
+++ b/partials/nav.html
@@ -97,6 +97,7 @@
 	  <ul>
 	  <li><a href="/docs/SPO_1. in 2. razred.pdf" target="_blank">SPO_1.in2.razred</a></li>
 	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
+          <li><a href="/no_content.html">LUM_1.in2.razred</a></li>
 	  </ul> 
 	  </li>
   <li><a href="/Covid-19.html">Covid-19</a>
