--- a/partials/nav.html
+++ b/partials/nav.html
@@ -99,7 +99,7 @@
 	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
           <li><a href="/docs/LUM 1. in 2. r..pdf" target="_blank">LUM_1.in2.razred</a></li>
           <li><a href="/docs/PONOVIMO 1. RAZRED in 2. RAZRED.pdf" target="_blank">MAT_1.in2.razred</a></li>
-          <li><a href="/tekoce_covid.html">DRU_5.razred_23.3.-27.3.</a></li>
+          <li><a href="/docs/DRU_5. razred.pdf" target="_blank">DRU_5.razred_23.3.-27.3.</a></li>
 	  </ul> 
 	  </li>
   <li><a href="/Covid-19.html">Covid-19</a>
