--- a/partials/nav.html
+++ b/partials/nav.html
@@ -93,7 +93,7 @@
   </li>
   
   <li><a href="/Kontakt.html">Kontakt</a>
-  <li><a href="/no_content.html">Covid-19_Nižja stopnja</a>
+  <li><a href="/no_content.html">Delo na daljavo_Nižja stopnja</a>
 	  <ul>
 	  <li><a href="/docs/SPO_1. in 2. razred.pdf" target="_blank">SPO_1.in2.razred</a></li>
 	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
