--- a/partials/nav.html
+++ b/partials/nav.html
@@ -102,7 +102,7 @@
           <li><a href="/docs/DRU_5. razred.pdf" target="_blank">DRU_5.razred_23.3.-27.3.</a></li>
 	  </ul> 
 	  </li>
-  <li><a href="/Covid-19.html">Covid-19</a>
+  <li><a href="/Covid-19.html">Delo na daljavo</a>
     <ul>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
