--- a/partials/nav.html
+++ b/partials/nav.html
@@ -121,7 +121,7 @@
             <li><a href="/docs/matematika_6.pdf" target="_blank">Matematika_6</a></li>
             <li><a href="/docs/matematika_7.pdf" target="_blank">Matematika_7</a></li>
 	    <li><a href="/docs/matematika_8.pdf" target="_blank">Matematika_8</a></li>
-	    <li><a href="/docs/matematika_9.pdf" target="_blank">Matematika_9</a></li>
+	    <li><a href="/docs/matematika_9_NOVO.pdf" target="_blank">Matematika_9_NOVO 23.3.2020</a></li>
 	    </ul>
 	  </li>
 	  <li>
