--- a/partials/nav.html
+++ b/partials/nav.html
@@ -103,6 +103,7 @@
           <li><a href="/docs/DRU_5. razred.pdf" target="_blank">DRU_5.razred_23.3.-27.3.</a></li>
 	  <li><a href="/docs/nit_4_navodila.pdf" target="_blank">NIT_4. razred</a></li>
 	  <li><a href="/docs/nit_5_navodila.pdf" target="_blank">NIT_5. razred</a></li>
+	  <li><a href="/docs/matematika_5.pdf" target="_blank">MAT_5. razred</a></li>
 	  </ul> 
 	  </li>
   <li><a href="/Covid-19.html">Delo na daljavo</a>
