--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,7 +96,7 @@
   <li><a href="/no_content.html">Delo na daljavo_Nižja stopnja</a>
 	  <ul>
 	  <li><a href="/docs/DRUŽENJE Z VAŠO KNJIŽNICO NA DALJAVO.pdf" target="_blank">Knjižnica Kočevje Obvešča</a></li>
-	  <li><a href="/docs/SPO_1. in 2. razred.pdf" target="_blank">SPO_1.in2.razred</a></li>
+	  <li><a href="/docs/1. in 2. r., 24. 3. 2020.pdf" target="_blank">1. in 2. razred_24.3.2020</a></li>
 	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
           <li><a href="/docs/LUM 1. in 2. r..pdf" target="_blank">LUM_1.in2.razred</a></li>
           <li><a href="/docs/PONOVIMO 1. RAZRED in 2. RAZRED.pdf" target="_blank">MAT_1.in2.razred</a></li>
