--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,7 @@
   <li><a href="/no_content.html">Delo na daljavo_Nižja stopnja</a>
 	  <ul>
 	  <li><a href="/docs/DRUŽENJE Z VAŠO KNJIŽNICO NA DALJAVO.pdf" target="_blank">Knjižnica Kočevje Obvešča</a></li>
+	  <li><a href="/docs/delo od doma_3.razred_25.3..pdf" target="_blank">3.razred_25.3.2020</a></li>
 	  <li><a href="/docs/1. in 2. r., 24. 3. 2020.pdf" target="_blank">1. in 2. razred_24.3.2020</a></li>
 	  <li><a href="/docs/materinski dan_3_4.pdf" target="_blank">Naloga za 3.in 4.razred_24.3.2020</a></li>
 	  <li><a href="/docs/GUM_1. in 2. razred.pdf" target="_blank">GUM_1.in2.razred</a></li>
