--- a/partials/nav.html
+++ b/partials/nav.html
@@ -149,6 +149,13 @@
             <li><a href="/docs/KEMIJA_9.pdf" target="_blank">Kemija_9</a></li>
 	    </ul>
 	  </li>
+	    <li>
+		  <a href="no_content.html" target="_blank">Fizika &#8594</a>
+	    <ul>
+            <li><a href="/docs/FIZIKA_8_1.del_Fara.pdf" target="_blank">Fizika_8</a></li>
+            <li><a href="/no_contenc.html">Fizika_9</a></li>
+	    </ul>
+	  </li>
 	  <li>
 		  <a href="no_content.html" target="_blank">Biologija &#8594</a>
 	    <ul>
