--- a/partials/nav.html
+++ b/partials/nav.html
@@ -97,6 +97,7 @@
 	  <ul>
 	  <li><a href="/docs/DRUŽENJE Z VAŠO KNJIŽNICO NA DALJAVO.pdf" target="_blank">Knjižnica Kočevje Obvešča</a></li>
 	  <li><a href="/docs/ČETRTEK,26.3.2020.pdf" target="_blank">1.in2.razred_26.3.2020</a></li>
+	  <li><a href="/docs/26.3.2020_3. in 4. razred.pdf" target="_blank">3.in4.razred_26.3.2020</a></li>
 	  <li><a href="/docs/1. in 2. razred_25.3..pdf" target="_blank">1.in2.razred_25.3.2020</a></li>	  
 	  <li><a href="/docs/delo od doma_3.razred_25.3..pdf" target="_blank">3.razred_25.3.2020</a></li>
 	  <li><a href="/docs/1. in 2. r., 24. 3. 2020.pdf" target="_blank">1. in 2. razred_24.3.2020</a></li>
