--- a/partials/nav.html
+++ b/partials/nav.html
@@ -96,6 +96,7 @@
   <li><a href="/no_content.html">Delo na daljavo_Nižja stopnja</a>
 	  <ul>
 	  <li><a href="/docs/DRUŽENJE Z VAŠO KNJIŽNICO NA DALJAVO.pdf" target="_blank">Knjižnica Kočevje Obvešča</a></li>
+	  <li><a href="/docs/PETEK, 27.3.2020.pdf" target="_blank">1.in2.razred_27.3.2020</a></li>
 	  <li><a href="/docs/ČETRTEK,26.3.2020.pdf" target="_blank">1.in2.razred_26.3.2020</a></li>
 	  <li><a href="/docs/26.3.2020_3. in 4. razred.pdf" target="_blank">3.in4.razred_26.3.2020</a></li>
 	  <li><a href="/docs/1. in 2. razred_25.3..pdf" target="_blank">1.in2.razred_25.3.2020</a></li>	  
