--- a/partials/nav.html
+++ b/partials/nav.html
@@ -114,6 +114,7 @@
 	  </li>
   <li><a href="/Covid-19.html">Delo na daljavo</a>
     <ul>
+	  <li><a href="/Covid-19.html">NOVO OBVESTILO_30.03.2020</a></li>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
 	  <li><a href="/docs/Poseben program za otroke in prost dostop do spletnih vsebin.pdf" target="_blank">RTVSLO-program za mlade-INFO</a></li>
