--- a/partials/nav.html
+++ b/partials/nav.html
@@ -179,5 +179,11 @@
   </ul>
   </li>
 	
+	<li><a href="/no_content.html">Postopno vračanje učencev k pouku</a>
+  <ul>
+	  <li><a href="/docs/DRUŽENJE Z VAŠO KNJIŽNICO NA DALJAVO.pdf" target="_blank">OPredelitev zdravstvenih omejitev za otroke</a></li>
+  </ul> 
+</li>
+	
 
 </ul>
