--- a/partials/nav.html
+++ b/partials/nav.html
@@ -115,7 +115,6 @@
 	  </li>
   <li><a href="/Covid-19.html">Delo na daljavo</a>
     <ul>
-	  <li><a href="/docs/matematika_5.pdf" target="_blank">PONOVNO VRAČANJE UČENCEV V ŠOLO</a></li>
 	  <li><a href="/e_učilnica.html">NOVO OBVESTILO_30.03.2020</a></li>
 	  <li><a href="/Covid-19.html">Informacije za starše in otroke</a></li>
 	  <li><a href="/docs/Navodila za delo na daljavo_obvestilo.pdf" target="_blank">Navodila za delo na daljavo</a></li>
@@ -179,7 +178,7 @@
   </ul>
   </li>
 	
-	<li><a href="/no_content.html">Postopno vračanje učencev k pouku</a>
+	<li><a href="/Covid-19.html">Postopno vračanje učencev k pouku</a>
   <ul>
 	  <li><a href="/docs/OMEJITVE.pdf" target="_blank">Opredelitev zdravstvenih omejitev za otroke</a></li>
   </ul> 
