--- a/partials/nav.html
+++ b/partials/nav.html
@@ -29,13 +29,13 @@
       <li><a href="/KriterijiOcenjevanja.html">Kriteriji ocenjevanja</a></li>
       <li><a href="/docs/Predmetnik2019_2020.pdf" target="_blank">Predmetnik 2019-2020</a></li>
       <li><a href="/docs/SolskiKoledar2019_2020.pdf" target="_blank">Šolski koledar 2019-2020</a></li>
+      <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2020-2021</a></li>
       <li><a href="/docs/Izbirni2019_2020.pdf" target="_blank">Izbirni predmeti 2019-2020</a></li>
       <li><a href="/Govorilne_ure.html">Govorilne ure in roditeljski sestanki 2019-2020</a></li>
       <li><a href="/docs/Dnevi_2019_2020.pdf" target="_blank">Dnevi dejavnosti 2019-2020</a></li>
-      <li><a href="/docs/marec_1920.pdf" target="_blank">Jedilnik za tekoči mesec_MAREC 2020</a></li>
       <li><a href="/docs/SolskaPot.pdf" target="_blank">Šolska pot</a></li>
       <li><a href="/docs/Projekti20192010.pdf" target="_blank">Projekti in tečaji 2019-2020</a></li>
-      <li><a href="/NPZ_2020.html">Nacionalno preverjanje znanja 2019-2020</a></li>
+ 
 
 
     </ul>
